jpms args